syntax = "proto3";

package admin_l3_commands;

service L3Commands {
  rpc CheckHealth (L3HealthCheckRequest)
      returns (L3HealthCheckResponse);
}

message L3HealthCheckRequest {
  string ping = 1;
}

message L3HealthCheckResponse {
  bool connected = 1;
  string status = 2;
  string pong = 3;
  string ip = 4;
  repeated uint32 ports = 5;
}